--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -20,4 +20,4 @@ jobs:
         run: npm ci
 
       - name: Run ESLint
-        run: npx eslint . --config eslint.config.js
+        run: npx eslint .
