--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,73 +14,46 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
       
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: lts/*
-      
-      - name: Cache Node modules
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.npm
-            node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          node-version: '20'
+          cache: 'npm'
       
       - name: Cache Playwright browsers
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
           path: |
             ~/.cache/ms-playwright
           key: ${{ runner.os }}-playwright-${{ hashFiles('package-lock.json') }}
       
       - name: Install dependencies
-        run: npm ci
-      
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps
-      
-      - name: Install Allure CLI
-        run: npm install -g allure-commandline
+        run: |
+          npm ci
+          npx playwright install --with-deps
       
       - name: Run tests
         run: |
           npx playwright test \
-          --project=chromium \
-          --project=firefox \
-          --reporter=html,allure-playwright
+            --project=chromium \
+            --project=firefox \
+            --reporter=html
       
-      - name: Generate Allure Report
-        if: always()
-        run: |
-          npx allure generate allure-results --clean -o allure-report
-      
-      - name: Archive Playwright report
-        uses: actions/upload-artifact@v4
+      - name: Upload HTML report
+        uses: actions/upload-artifact@v3
         if: always()
         with:
           name: playwright-report
           path: playwright-report/
-          retention-days: 30
-      
-      - name: Archive Allure report
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: allure-report
-          path: allure-report/
-          retention-days: 30
-      
-      - name: Archive screenshots
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: screenshots
-          path: test-results/**/*.png
           retention-days: 7
       
-      - name: Show Playwright logs on failure
+      - name: Upload screenshots
+        uses: actions/upload-artifact@v3
         if: failure()
-        run: |
-          cat playwright-report/*.log || true
+        with:
+          name: test-screenshots
+          path: test-results/**/*.png
+          retention-days: 3
