--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,55 +5,32 @@ on:
     branches: [main, master]
   pull_request:
     branches: [main, master]
-  schedule:
-    - cron: '0 0 * * *' # Daily at midnight
 
 jobs:
   test:
-    timeout-minutes: 60
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
-      
+        uses: actions/checkout@v3
+        
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: '20'
-          cache: 'npm'
-      
-      - name: Cache Playwright browsers
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/ms-playwright
-          key: ${{ runner.os }}-playwright-${{ hashFiles('package-lock.json') }}
-      
+          node-version: '18'
+          
       - name: Install dependencies
         run: |
           npm ci
-          npx playwright install --with-deps
-      
+          npx playwright install
+          
       - name: Run tests
-        run: |
-          npx playwright test \
-            --project=chromium \
-            --project=firefox \
-            --reporter=html
-      
-      - name: Upload HTML report
+        run: npx playwright test
+        
+      - name: Upload report
         uses: actions/upload-artifact@v3
         if: always()
         with:
           name: playwright-report
           path: playwright-report/
-          retention-days: 7
-      
-      - name: Upload screenshots
-        uses: actions/upload-artifact@v3
-        if: failure()
-        with:
-          name: test-screenshots
-          path: test-results/**/*.png
-          retention-days: 3
