--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,4 @@
-name: Playwright Tests
+﻿name: Playwright Tests
 
 on:
   push:
@@ -12,24 +12,14 @@ jobs:
     timeout-minutes: 30
     
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: '18'
-          
-      - name: Install dependencies
-        run: |
-          npm ci
-          npx playwright install
-          
-      - name: Run tests
-        run: npx playwright test
-        
-      - name: Upload report
-        uses: actions/upload-artifact@v3
+      - run: npm ci
+      - run: npx playwright install
+      - run: npx playwright test
+      - uses: actions/upload-artifact@v3
         if: always()
         with:
           name: playwright-report
