--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,15 +12,25 @@ jobs:
     timeout-minutes: 30
     
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
-      - run: npm ci
-      - run: npx playwright install
-      - run: npx playwright test
-      - uses: actions/upload-artifact@v3
-        if: always()
+          node-version: '20'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: |
+          npm ci
+          npx playwright install
+          
+      - name: Run tests
+        run: npx playwright test
+          
+      - name: Upload report
+        uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: playwright-report/
