--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,36 +1,13 @@
 ﻿name: Playwright Tests
-
-on:
-  push:
-    branches: [main, master]
-  pull_request:
-    branches: [main, master]
-
+on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-      
-      - name: Install dependencies
-        run: |
-          npm ci
-          npx playwright install
-          
-      - name: Run tests
-        run: npx playwright test
-          
-      - name: Upload report
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-report
-          path: playwright-report/
+      - run: npm ci
+      - run: npx playwright install
+      - run: npx playwright test
