--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,10 @@
-﻿name: Playwright Tests
+name: Playwright Tests
+
+
+permissions:
+  contents: read
+  actions: read
+  packages: read
 
 on:
   push:
@@ -12,18 +18,11 @@ jobs:
     timeout-minutes: 30
     
     steps:
-      
-      - name: Set permissions
-        run: |
-          echo "ACTIONS_RUNTIME_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
-          echo "ACTIONS_RUNTIME_URL=${{ github.server_url }}/_apis/pipelines" >> $GITHUB_ENV
-
-     
       - name: Checkout code
-        uses: actions/checkout@v4  
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4  
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
@@ -36,13 +35,9 @@ jobs:
       - name: Run tests
         run: npx playwright test
           
-      
       - name: Upload report
-        uses: actions/upload-artifact@v4  
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: playwright-report/
-          retention-days: 3
-        env:
-          ACTIONS_RUNTIME_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ACTIONS_RUNTIME_URL: ${{ github.server_url }}
