--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,11 +1,5 @@
 name: Playwright Tests
 
-
-permissions:
-  contents: read
-  actions: read
-  packages: read
-
 on:
   push:
     branches: [main, master]
@@ -25,7 +19,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
       
       - name: Install dependencies
         run: |
@@ -34,10 +27,12 @@ jobs:
           
       - name: Run tests
         run: npx playwright test
-          
-      - name: Upload report
+        
+      
+      - name: Save test results
         if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-report
-          path: playwright-report/
+        run: |
+          echo "### Test Results ###" >> $GITHUB_STEP_SUMMARY
+          echo "- Total tests: $(grep -c 'ok' playwright-report/index.html || true)" >> $GITHUB_STEP_SUMMARY
+          echo "- Failed tests: $(grep -c 'failed' playwright-report/index.html || true)" >> $GITHUB_STEP_SUMMARY
+          echo "View full report in workflow artifacts" >> $GITHUB_STEP_SUMMARY
