--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 45  
     
     steps:
       - name: Checkout code
@@ -19,20 +19,52 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
       
-      - name: Install dependencies
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgbm-dev libasound2-dev
+      
+      - name: Install project dependencies
         run: |
           npm ci
-          npx playwright install
+          npx playwright install --with-deps  # Установка браузеров с зависимостями
           
-      - name: Run tests
-        run: npx playwright test
-        
+      - name: Run Playwright tests
+        run: |
+          npx playwright test \
+            --workers=2 \
+            --retries=2 \
+            --project=chromium --project=firefox \
+            --reporter=html,list
+        env:
+          CI: true
+          HEADLESS: true
+          PLAYWRIGHT_TEST_TIMEOUT: 60000
       
-      - name: Save test results
+      - name: Upload HTML report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 7
+      
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: test-results/
+          retention-days: 7
+      
+      - name: Generate test summary
         if: always()
         run: |
-          echo "### Test Results ###" >> $GITHUB_STEP_SUMMARY
-          echo "- Total tests: $(grep -c 'ok' playwright-report/index.html || true)" >> $GITHUB_STEP_SUMMARY
-          echo "- Failed tests: $(grep -c 'failed' playwright-report/index.html || true)" >> $GITHUB_STEP_SUMMARY
-          echo "View full report in workflow artifacts" >> $GITHUB_STEP_SUMMARY
+          echo "### Test Results Summary" >> $GITHUB_STEP_SUMMARY
+          echo "- **Total tests:** $(find test-results -name '*.json' | wc -l)" >> $GITHUB_STEP_SUMMARY
+          echo "- **Passed tests:** $(grep -rl '"status":"passed"' test-results | wc -l)" >> $GITHUB_STEP_SUMMARY
+          echo "- **Failed tests:** $(grep -rl '"status":"failed"' test-results | wc -l)" >> $GITHUB_STEP_SUMMARY
+          echo "- **Flaky tests:** $(grep -rl '"status":"flaky"' test-results | wc -l)" >> $GITHUB_STEP_SUMMARY
+          echo "📊 [View HTML Report](https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID)" >> $GITHUB_STEP_SUMMARY
