--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,6 +1,5 @@
 name: Playwright Tests
-
-on:
+on: 
   push:
     branches: [main, master]
   pull_request:
@@ -9,62 +8,31 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    timeout-minutes: 45  
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    timeout-minutes: 30
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+    steps:
+      - uses: actions/checkout@v4
+      
+      - uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-      
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgbm-dev libasound2-dev
-      
-      - name: Install project dependencies
+
+      - name: Install system deps
+        run: sudo apt-get install -y libgbm-dev libasound2-dev
+
+      - name: Install dependencies
         run: |
           npm ci
-          npx playwright install --with-deps  # Установка браузеров с зависимостями
-          
-      - name: Run Playwright tests
-        run: |
-          npx playwright test \
-            --workers=2 \
-            --retries=2 \
-            --project=chromium --project=firefox \
-            --reporter=html,list
+          npx playwright install --with-deps
+
+      - name: Run tests
+        run: npx playwright test
         env:
           CI: true
-          HEADLESS: true
-          PLAYWRIGHT_TEST_TIMEOUT: 60000
-      
-      - name: Upload HTML report
+
+      - uses: actions/upload-artifact@v4
         if: always()
-        uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: playwright-report/
-          retention-days: 7
-      
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: test-results/
-          retention-days: 7
-      
-      - name: Generate test summary
-        if: always()
-        run: |
-          echo "### Test Results Summary" >> $GITHUB_STEP_SUMMARY
-          echo "- **Total tests:** $(find test-results -name '*.json' | wc -l)" >> $GITHUB_STEP_SUMMARY
-          echo "- **Passed tests:** $(grep -rl '"status":"passed"' test-results | wc -l)" >> $GITHUB_STEP_SUMMARY
-          echo "- **Failed tests:** $(grep -rl '"status":"failed"' test-results | wc -l)" >> $GITHUB_STEP_SUMMARY
-          echo "- **Flaky tests:** $(grep -rl '"status":"flaky"' test-results | wc -l)" >> $GITHUB_STEP_SUMMARY
-          echo "📊 [View HTML Report](https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID)" >> $GITHUB_STEP_SUMMARY
